<resources>
    <string name="app_name">LabExam02</string>
    <string name="onb1title">Discover personalized job recommendations tailored to your skills and interests.</string>
    <string name="button_onbScreen1">Next</string>
    <string name="onb2title">Explore career resources: resumes, interviews, and industry insights.</string>
    <string name="onb3title">Network with professionals, mentors, and peers to boost your career.</string>
    <string name="Login_title">Log In</string>
    <string name="Email_label">Email</string>
    <string name="EmailHint">example@gmailcom</string>
    <string name="Password_label">Password</string>
    <string name="Password_Hint">Enter Your Password</string>
    <string name="loginButton_label">Login</string>
    <string name="Home_title1">Personalized Job Recommendations</string>
    <string name="Home_title2">News and Updates</string>
    <string name="Home_NewsDescription">SLIIT to Host Internship Fair on March 23, Offering Exciting Opportunities for Students to Kickstart Their Careers</string>
    <string name="Apply_button">Apply</string>
    <string name="view_button">View</string>
    <string name="job_google">UI/UX Designer</string>
    <string name="job_figma">Front end Dev...</string>
    <string name="job_ball">UX Designer</string>
    <string name="job_pixel">Product Designer</string>
    <string name="oppo_title1">Newest Jobs</string>
    <string name="res_title2">Resume Templates</string>
    <string name="res_title3">Interview Tips</string>
    <string name="Name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Phone">Phone Number</string>
    <string name="NameHint">Sajith jayasooriya</string>
    <string name="emailHint">Sajithjay99@gmail.com</string>
    <string name="passwordHint">***************</string>
    <string name="PhoneHint">0779272044</string>
    <string name="logout">Log Out</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="address_label">Address</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="address_hint">Enter your address</string>
    <string name="dob_label">Date of Birth</string>
    <string name="gender_label">Gender</string>
    <string name="male_option">Male</string>
    <string name="female_option">Female</string>
    <string name="other_option">Other</string>
    <string name="dob_hint">Enter Date of Birth</string>
    <string name="gender_hint">Select Gender</string>
    <string name="terms_checkbox_hint">I agree to the terms and conditions</string>
    <string name="terms_checkbox">I agree to the terms and conditions</string>
    <string name="Backbtn">Back</string>

</resources>