<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="102dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notifi_icon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_icon" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/career_start" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/hometitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/discover" />

    <TextView
        android:id="@+id/hometitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Home_title1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="400dp"
        android:layout_height="228dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hometitle1"
        app:srcCompat="@drawable/job1" />

    <Button
        android:id="@+id/Applybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:backgroundTint="@color/HomePgButton_color"
        android:text="@string/Apply_button"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/hometitle1"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/hometitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="205dp"
        android:text="@string/Home_title2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <TextView
        android:id="@+id/newsDescription"
        android:layout_width="284dp"
        android:layout_height="118dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="112dp"
        android:background="@color/secondaryColor"
        android:text="@string/Home_NewsDescription"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hometitle2" />

    <Button
        android:id="@+id/viewbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/HomePgButton_color"
        android:text="@string/view_button"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/newsDescription"
        app:layout_constraintEnd_toEndOf="@+id/newsDescription"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="@+id/newsDescription"
        app:layout_constraintTop_toBottomOf="@+id/newsDescription"
        app:layout_constraintVertical_bias="0.346" />

    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/oppobtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsDescription"
        app:srcCompat="@drawable/homeiconyello" />

    <ImageButton
        android:id="@+id/oppobtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/homebtn"
        app:layout_constraintEnd_toStartOf="@+id/resourcesbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homebtn"
        app:layout_constraintTop_toTopOf="@+id/homebtn"
        app:srcCompat="@drawable/opportunitiesblack" />

    <ImageView
        android:id="@+id/resourcesbtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/oppobtn"
        app:layout_constraintEnd_toStartOf="@+id/profilebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oppobtn"
        app:layout_constraintTop_toTopOf="@+id/oppobtn"
        app:srcCompat="@drawable/resorcesiconblack" />

    <ImageView
        android:id="@+id/profilebtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/resourcesbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resourcesbtn"
        app:layout_constraintTop_toTopOf="@+id/resourcesbtn"
        app:srcCompat="@drawable/profileblack" />

</androidx.constraintlayout.widget.ConstraintLayout>